syntax = "proto3";
package osmosis.txfees.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "osmosis/txfees/v1beta1/feetoken.proto";

option go_package = "github.com/osmosis-labs/osmosis/v21/x/txfees/types";

// UpdateFeeTokenProposal is a gov Content type for adding new whitelisted fee
// token(s). It must specify a denom along with gamm pool ID to use as a spot
// price calculator. It can be used to add new denoms to the whitelist. It can
// also be used to update the Pool to associate with the denom. If Pool ID is
// set to 0, it will remove the denom from the whitelisted set.
message UpdateFeeTokenProposal {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  option (amino.name) = "osmosis/UpdateFeeTokenProposal";
  option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";

  string title = 1 [ (gogoproto.moretags) = "yaml:\"title\"" ];
  string description = 2 [ (gogoproto.moretags) = "yaml:\"description\"" ];
  repeated FeeToken feetokens = 3 [
    (gogoproto.moretags) = "yaml:\"fee_tokens\"",
    (gogoproto.nullable) = false
  ];
}